--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,73 +4,128 @@
   box-sizing: border-box;
 }
 html {
-  margin: 24px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: rgb(211, 196, 196);
-  background-size: contain;
-  background-repeat: repeat;
+  font-family: "Roboto", sans-serif;
+  background-color: #d6d6d6;
 }
 header {
-  height: 100px;
+  font-size: 1.5em;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.colorful {
+  background-image: linear-gradient(
+    129deg,
+    #fdc500 25%,
+    #ffee32 25%,
+    #ffee32 50%,
+    #fdc500 50%,
+    #fdc500 75%,
+    #ffee32 75%,
+    #ffee32 100%
+  );
+
+  box-shadow: 5px 5px 10px #00000022;
+}
+header b {
+  margin-right: 0.15em;
+}
+h1,
+h2,
+h3 {
+  font-family: "Orbitron", sans-serif;
+}
+h1 {
+  margin: 20px;
+  font-weight: 700;
+}
+h2 {
+  width: 100%;
+  text-align: center;
+}
+h2,
+h3 {
+  margin-bottom: 15px;
+}
 main {
-  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+.main-container {
+  padding: 20px 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.top-container,
+.news-container,
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
 button {
-  background-color: #f15bb5;
+  background-color: #fdc500;
   padding: 12px 20px;
   font-size: 1rem;
   text-transform: uppercase;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Orbitron", sans-serif;
   border: none;
   border-radius: 25px;
   transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
 button:hover,
 button:active {
-  background-color: #fe85cd;
+  background-color: #ffee32;
   transform: scale(0.98);
 }
 h3 {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 .author {
   margin-bottom: 5px;
   font-style: italic;
 }
-a {
-  text-decoration: none;
-  font-size: 0.7rem;
-}
-.date {
-  background-color: rgb(237, 222, 222);
+.footer {
+  width: 100%;
+  padding: 7px 30px;
+  background-color: #202020;
+  color: #d6d6d6;
   position: absolute;
+  bottom: 0;
+  left: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  bottom: -10px;
-  right: -10px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  font-size: 0.9rem;
-  box-shadow: 5px 5px 10px #00000022;
+  justify-content: space-between;
+  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
+}
+.date,
+.link {
+  font-size: 0.6em;
 }
 .main-container {
   max-width: 512px;
 }
 .news-card {
   background-color: white;
-  border-radius: 15px;
-  padding: 20px 30px;
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+  padding: 20px 30px 35px 30px;
   margin-bottom: 15px;
   position: relative;
   box-shadow: 5px 5px 10px #00000022;
+  position: relative;
+  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+.news-card:hover,
+.news-card:active {
+  cursor: pointer;
+  transform: translatey(-5px);
+}
+.news-card:hover .footer,
+.news-card:active .footer {
+  box-shadow: inset 0 30px 0 #ffee32;
+  color: #202020;
 }
