--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* GENERALI */
 html {
   font-family: "Roboto", sans-serif;
   background-color: #d6d6d6;
@@ -13,6 +14,110 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+main {
+  display: flex;
+  justify-content: center;
+}
+.main-container {
+  max-width: 512px;
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.top-container,
+.news-container,
+.container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+h1,
+h2,
+h3 {
+  font-family: "Orbitron", sans-serif;
+}
+h1 {
+  margin: 20px;
+  font-weight: 700;
+}
+h2 {
+  margin-bottom: 15px;
+  width: 100%;
+  text-align: center;
+}
+h3 {
+  margin-bottom: 10px;
+}
+button {
+  background-color: #fdc500;
+  padding: 12px 20px;
+  font-size: 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-family: "Orbitron", sans-serif;
+  border: none;
+  border-radius: 25px;
+  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 2s;
+}
+button:hover,
+button:active {
+  cursor: pointer;
+  background-image: none;
+  background-color: #ffee32;
+  border: none;
+  transform: scale(0.98);
+}
+/* CARD */
+.content {
+  padding: 20px 30px 15px 30px;
+}
+.footer {
+  width: 100%;
+  padding: 10px 30px;
+  background-color: #202020;
+  color: #d6d6d6;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  justify-content: space-between;
+  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+.footer > div {
+  width: 100%;
+  margin: 10px 0;
+}
+.author {
+  font-style: italic;
+}
+.date,
+.link {
+  font-size: 0.8em;
+}
+.news-card {
+  background-color: white;
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+  margin-bottom: 15px;
+  box-shadow: 5px 5px 10px #00000022;
+  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+.news-card:hover,
+.news-card:active {
+  cursor: pointer;
+  transform: translatey(-5px);
+}
+.news-card:hover .footer,
+.news-card:active .footer {
+  box-shadow: inset 512px 0px 10px #ffee32;
+  color: #202020;
+}
+.hid {
+  display: none;
 }
 .colorful {
   background-image: linear-gradient(
@@ -25,107 +130,5 @@ header {
     #ffee32 75%,
     #ffee32 100%
   );
-
   box-shadow: 5px 5px 10px #00000022;
-}
-header b {
-  margin-right: 0.15em;
-}
-h1,
-h2,
-h3 {
-  font-family: "Orbitron", sans-serif;
-}
-h1 {
-  margin: 20px;
-  font-weight: 700;
-}
-h2 {
-  width: 100%;
-  text-align: center;
-}
-h2,
-h3 {
-  margin-bottom: 15px;
-}
-main {
-  display: flex;
-  justify-content: center;
-}
-.main-container {
-  padding: 20px 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.top-container,
-.news-container,
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-button {
-  background-color: #fdc500;
-  padding: 12px 20px;
-  font-size: 1rem;
-  text-transform: uppercase;
-  font-family: "Orbitron", sans-serif;
-  border: none;
-  border-radius: 25px;
-  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-}
-button:hover,
-button:active {
-  background-color: #ffee32;
-  transform: scale(0.98);
-}
-h3 {
-  margin-bottom: 10px;
-}
-.author {
-  margin-bottom: 5px;
-  font-style: italic;
-}
-.footer {
-  width: 100%;
-  padding: 7px 30px;
-  background-color: #202020;
-  color: #d6d6d6;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: space-between;
-  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
-}
-.date,
-.link {
-  font-size: 0.6em;
-}
-.main-container {
-  max-width: 512px;
-}
-.news-card {
-  background-color: white;
-  width: 100%;
-  border-radius: 15px 15px 0 0;
-  padding: 20px 30px 35px 30px;
-  margin-bottom: 15px;
-  position: relative;
-  box-shadow: 5px 5px 10px #00000022;
-  position: relative;
-  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
-}
-.news-card:hover,
-.news-card:active {
-  cursor: pointer;
-  transform: translatey(-5px);
-}
-.news-card:hover .footer,
-.news-card:active .footer {
-  box-shadow: inset 0 30px 0 #ffee32;
-  color: #202020;
 }
