--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ button {
   font-family: "Orbitron", sans-serif;
   border: none;
   border-radius: 25px;
-  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 2s;
+  transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
 button:hover,
 button:active {
@@ -70,7 +70,12 @@ button:active {
   background-image: none;
   background-color: #ffee32;
   border: none;
-  transform: scale(0.98);
+}
+button:hover {
+  transform: scale(0.95);
+}
+button:active {
+  transform: scale(0.9);
 }
 /* CARD */
 .content {
