--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ button {
   font-family: "Orbitron", sans-serif;
   border: none;
   border-radius: 25px;
+  box-shadow: 5px 5px 10px #00000022;
   transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
 button:hover,
@@ -73,9 +74,10 @@ button:active {
 }
 button:hover {
   transform: scale(0.95);
+  box-shadow: 2px 2px 8px #00000033;
 }
 button:active {
-  transform: scale(0.9);
+  transform: scale(0.9) translateY(2px);
 }
 /* CARD */
 .content {
@@ -119,6 +121,7 @@ button:active {
 .news-card:hover .footer,
 .news-card:active .footer {
   box-shadow: inset 512px 0px 10px #ffee32;
+  /* box-shadow: inset 0px 50px 0px #ffee32; */
   color: #202020;
 }
 .hid {
